// Vitest Snapshot v1

exports[`App > [flaky]should display today photo if today button clicked 1`] = `
<div>
  <div
    class="App"
  >
    <h1
      style="color: white; text-align: center;"
    >
      NASA's Astronomy Picture of the day
    </h1>
    <div
      class="controls"
    >
      <button
        ant-click-animating-without-extra-node="true"
        class="ant-btn ant-btn-default"
        data-testid="prevBtn"
        type="button"
      >
        <span>
          Prev
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="nextBtn"
        type="button"
      >
        <span>
          Next
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="randomBtn"
        type="button"
      >
        <span>
          Random
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="aboutBtn"
        type="button"
      >
        <span>
          About this pic
        </span>
      </button>
      <button
        ant-click-animating-without-extra-node="false"
        class="ant-btn ant-btn-default"
        data-testid="todayBtn"
        type="button"
      >
        <span>
          Today
        </span>
      </button>
      <div
        class="ant-picker"
      >
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            data-testid="datepicker"
            placeholder="Select date"
            readonly=""
            size="12"
            title="2022-05-13"
            value="2022-05-13"
          />
          <span
            class="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              class="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-picker-clear"
            role="button"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-default"
        data-testid="appInfoBtn"
        type="button"
      >
        <span>
          ❔
        </span>
      </button>
    </div>
    <div
      style="text-align: center;"
    >
      <div
        class="ant-image"
      >
        <img
          class="ant-image-img"
          src="/src/mock/img/1.jpg"
          style="max-height: 80vh; object-fit: contain;"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App > should display application info if about button clicked 1`] = `
<div
  data-testid="appInfo"
>
  <p>
    Based on 
    <a
      href="https://api.nasa.gov/"
    >
      NASA API
    </a>
  </p>
  <p>
    Made by 
    <a
      href="https://github.com/tatarianBarbarian"
    >
      Felix Khafizov
    </a>
  </p>
  <p>
    <a
      href="https://github.com/tatarianBarbarian/nasa-apod-react"
    >
      Source code
    </a>
  </p>
</div>
`;

exports[`App > should load next day picture when clicked on next button 1`] = `
<div>
  <div
    class="App"
  >
    <h1
      style="color: white; text-align: center;"
    >
      NASA's Astronomy Picture of the day
    </h1>
    <div
      class="controls"
    >
      <button
        ant-click-animating-without-extra-node="true"
        class="ant-btn ant-btn-default"
        data-testid="prevBtn"
        type="button"
      >
        <span>
          Prev
        </span>
      </button>
      <button
        ant-click-animating-without-extra-node="false"
        class="ant-btn ant-btn-default"
        data-testid="nextBtn"
        type="button"
      >
        <span>
          Next
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="randomBtn"
        type="button"
      >
        <span>
          Random
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="aboutBtn"
        type="button"
      >
        <span>
          About this pic
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="todayBtn"
        type="button"
      >
        <span>
          Today
        </span>
      </button>
      <div
        class="ant-picker"
      >
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            data-testid="datepicker"
            placeholder="Select date"
            readonly=""
            size="12"
            title="2022-05-13"
            value="2022-05-13"
          />
          <span
            class="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              class="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-picker-clear"
            role="button"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-default"
        data-testid="appInfoBtn"
        type="button"
      >
        <span>
          ❔
        </span>
      </button>
    </div>
    <div
      style="text-align: center;"
    >
      <div
        class="ant-image"
      >
        <img
          class="ant-image-img"
          src="/src/mock/img/1.jpg"
          style="max-height: 80vh; object-fit: contain;"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App > should load previous day picture when clicked on prev button 1`] = `
<div>
  <div
    class="App"
  >
    <h1
      style="color: white; text-align: center;"
    >
      NASA's Astronomy Picture of the day
    </h1>
    <div
      class="controls"
    >
      <button
        ant-click-animating-without-extra-node="true"
        class="ant-btn ant-btn-default"
        data-testid="prevBtn"
        type="button"
      >
        <span>
          Prev
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="nextBtn"
        type="button"
      >
        <span>
          Next
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="randomBtn"
        type="button"
      >
        <span>
          Random
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="aboutBtn"
        type="button"
      >
        <span>
          About this pic
        </span>
      </button>
      <button
        class="ant-btn ant-btn-default"
        data-testid="todayBtn"
        type="button"
      >
        <span>
          Today
        </span>
      </button>
      <div
        class="ant-picker"
      >
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            data-testid="datepicker"
            placeholder="Select date"
            readonly=""
            size="12"
            title="2022-05-12"
            value="2022-05-12"
          />
          <span
            class="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              class="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
          <span
            class="ant-picker-clear"
            role="button"
          >
            <span
              aria-label="close-circle"
              class="anticon anticon-close-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <button
        class="ant-btn ant-btn-default"
        data-testid="appInfoBtn"
        type="button"
      >
        <span>
          ❔
        </span>
      </button>
    </div>
    <div
      style="text-align: center;"
    >
      <div
        class="ant-image"
      >
        <img
          class="ant-image-img"
          src="/src/mock/img/2.jpg"
          style="max-height: 80vh; object-fit: contain;"
        />
        <div
          class="ant-image-mask"
        >
          <div
            class="ant-image-mask-info"
          >
            <span
              aria-label="eye"
              class="anticon anticon-eye"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="eye"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                />
              </svg>
            </span>
            Preview
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
